Fixed an issue with the dashboard blocking out the header on mobile, and added a unique title and website description.

--- a/src/App.css
+++ b/src/App.css
@@ -83,3 +83,6 @@ button:hover {
 iframe{
   height: 100vh;
 }
+h1{
+  margin-top: 100px;
+}
